trying to fix the overflow issue

--- a/admin/src/components/RegisterTeamMember.css
+++ b/admin/src/components/RegisterTeamMember.css
@@ -27,6 +27,8 @@ body {
   padding: 30px;
   width: 100%;
   max-width: 100%;
+   overflow-y: auto;
+  max-height: 90vh;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
